movies/movies.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: movies
  name: movies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movies
  strategy: {}
  template:
    metadata:
      labels:
        app: movies
    spec:
      containers:
        - image: crististoica/movies:latest
          name: movies
          resources: {}
          ports:
            - containerPort: 8080
