movies/movies-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movies-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /api/movies
spec:
  rules:
    - host: movies.info
      http:
        paths:
          - path: /api/movies
            pathType: Prefix
            backend:
              service:
                name: movies
                port:
                  number: 8080
